# ssl-client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ssl-client.pro
build-ssl-Client-Desktop_Qt_5_7_1_GCC_64bit-Debug/: Makefile  main  moc_myudp.cpp
include/: CMakeLists.txt  include.pri
include/ssl-client/: ssl-client.h
include/ssl-client/net/: net.h
include/ssl-client/net/grSim_client/: grSim_client.cpp  grSim_client.h
include/ssl-client/net/grSim_client_example/: grSim_client_example.cpp  grSim_client_example.h
include/ssl-client/net/netraw/: netraw.cpp  netraw.h
include/ssl-client/net/referee_ssl_client/: referee_ssl_client.cpp  referee_ssl_client.h
include/ssl-client/net/robocup_ssl_client/: robocup_ssl_client.cpp  robocup_ssl_client.h
include/ssl-client/net/robocup_ssl_server/: robocup_ssl_server.cpp  robocup_ssl_server.h
include/ssl-client/protobuf/: protobuf.h
include/ssl-client/protobuf-files/: .gitignore  protobuf-files.h  protobuf-files.pri
include/ssl-client/protobuf-files/pb/proto/: compile.sh
include/ssl-client/utils/: utils.h
include/ssl-client/utils/timer/: timer.h
include/ssl-client/utils/util/: util.h
scripts/ubuntu/: protobuf.sh  qt.sh
src/: CMakeLists.txt  main.cpp  src.pro
ssl-Client/: main  main.cpp  ssl-Client.pro
ssl-Client/net/: grSim_client.cpp  grSim_client.h  myudp.cpp  myudp.h  netraw.cpp  robocup_ssl_client.cpp  robocup_ssl_client.h
ssl-Client/pb/: grSim_Commands.pb.cc  grSim_Commands.pb.h  grSim_Packet.pb.cc  grSim_Packet.pb.h  grSim_Replacement.pb.cc  grSim_Replacement.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_geometry_legacy.pb.cc  messages_robocup_ssl_geometry_legacy.pb.h  messages_robocup_ssl_refbox_log.pb.cc  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper_legacy.pb.cc  messages_robocup_ssl_wrapper_legacy.pb.h
ssl-Client/pb/proto/: grSim_Replacement.proto
