cmake_minimum_required(VERSION 3.15)

include(../cmake-common/robocin.cmake)

project(ssl-client LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

function(ROBOCIN_CHECK_PROTOBUFS)
  set(PROTOBUF_PATH ssl-client/protobuf-files/pb)

  file(GLOB PROTOBUF_HEADERS ${PROTOBUF_PATH}/*.pb.h)
  list(APPEND PROTOBUF_GENERATED_FILES ${PROTOBUF_HEADERS})

  file(GLOB PROTOBUF_SOURCES ${PROTOBUF_PATH}/*.pb.cc)
  list(APPEND PROTOBUF_GENERATED_FILES ${PROTOBUF_SOURCES})

  if(NOT PROTOBUF_GENERATED_FILES)
    set(INPUT_DIRECTORY ${PROTOBUF_PATH}/proto)
    set(OUTPUT_DIRECTORY ${PROTOBUF_PATH})

    file(GLOB PROTOBUF_FILES ${INPUT_DIRECTORY}/*.proto)

    foreach(PROTOBUF_FILE ${PROTOBUF_FILES})
      get_filename_component(CURRENT_FILE ${PROTOBUF_FILE} NAME)
      execute_process(COMMAND protoc -I=${INPUT_DIRECTORY} --cpp_out=${OUTPUT_DIRECTORY} ${CURRENT_FILE} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
    endforeach()
  endif()
endfunction()

ROBOCIN_CHECK_PROTOBUFS()

file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "*.h" "*.pb.h")
file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "*.cpp" "*.pb.cc")

add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})

ROBOCIN_LINK_FUNDAMENTAL_LIBRARIES(${PROJECT_NAME})
