cmake_minimum_required(VERSION 3.15)

include(../cmake/utils.cmake)

project(test-ssl-client LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "*.h")
file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "*.cpp")

add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

ROBOCIN_LINK_FUNDAMENTAL_LIBRARIES(${PROJECT_NAME})

ROBOCIN_LINK_AND_INCLUDE_DIR(${PROJECT_NAME} ../include)
target_link_libraries(${PROJECT_NAME} PRIVATE ssl-client)
